--- a/page-details.html
+++ b/page-details.html
@@ -114,6 +114,25 @@
             outputIframe.contentWindow.eval(jsCode.value); 
         }
 
+
+        let textareas = document.querySelectorAll('textarea').forEach((text) => {
+            text.addEventListener('keydown', function(e) {
+                if (e.key == 'Tab') {
+                  e.preventDefault();
+                  var start = this.selectionStart;
+                  var end = this.selectionEnd;
+              
+                  // set textarea value to: text before caret + tab + text after caret
+                  this.value = this.value.substring(0, start) +
+                    "\t" + this.value.substring(end);
+              
+                  // put caret at right position again
+                  this.selectionStart =
+                    this.selectionEnd = start + 1;
+                }
+              });
+        })
+
     </script>
     <script src="./js/main.js"></script>
 </body>
